# my-new-minecraft-luncher

./: .env.example  .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.cargo/: config.toml
.github/workflows/: all_os.yml  build.yml
apps/desktop/: .electron-builder.config.cjs  package.json
crates/carbon_app/: Cargo.toml
crates/carbon_app/src/: base_api_override.rs  cache_middleware.rs  iridium_client.rs  livenesstracker.rs  logger.rs  main.rs
crates/carbon_app/src/api/: account.rs  keys.rs  mc.rs  mod.rs  settings.rs  translation.rs  vtask.rs
crates/carbon_app/src/api/instance/: mod.rs
crates/carbon_app/src/api/java/: mod.rs
crates/carbon_app/src/api/modplatforms/: filters.rs  mod.rs  responses.rs
crates/carbon_app/src/api/modplatforms/curseforge/: filters.rs  structs.rs
crates/carbon_app/src/api/modplatforms/modrinth/: filters.rs  responses.rs  structs.rs
crates/carbon_app/src/domain/: vtask.rs
crates/carbon_app/src/domain/instance/: mod.rs
crates/carbon_app/src/domain/minecraft/: minecraft.rs
crates/carbon_app/src/error/: mod.rs
crates/carbon_app/src/managers/: download.rs  mod.rs  prisma_client.rs  vtask.rs
crates/carbon_app/src/managers/account/: api.rs  enroll.rs  gdl_account.rs  mod.rs  oauth_error.html  oauth_success.html  skin.rs
crates/carbon_app/src/managers/instance/: explore.rs  log.rs  mod.rs  mods.rs
crates/carbon_app/src/managers/instance/export/: curseforge_archive.rs  gdlauncher_archive.rs  mod.rs  modrinth_archive.rs
crates/carbon_app/src/managers/instance/importer/: curseforge.rs  curseforge_archive.rs  legacy_gdlauncher.rs  mod.rs  modrinth_archive.rs
crates/carbon_app/src/managers/instance/installer/: mod.rs
crates/carbon_app/src/managers/instance/modpack/: mod.rs
crates/carbon_app/src/managers/instance/modpack/packinfo/: v1.rs
crates/carbon_app/src/managers/instance/run/: java.rs  minecraft.rs  mod.rs  modpack.rs
crates/carbon_app/src/managers/java/: java_checker.rs  mod.rs  scan_and_sync.rs
crates/carbon_app/src/managers/java/managed/: azul_zulu.rs  mod.rs
crates/carbon_app/src/managers/metadata/: mods.rs
crates/carbon_app/src/managers/metadata/cache/: mod.rs
crates/carbon_app/src/managers/metadata/cache/curseforge/: mod.rs  modpack.rs
crates/carbon_app/src/managers/metadata/cache/modrinth/: mod.rs  modpack.rs
crates/carbon_app/src/managers/metrics/: mod.rs
crates/carbon_app/src/managers/minecraft/: curseforge.rs  forge.rs  minecraft.rs  mod.rs  modrinth.rs  neoforge.rs
crates/carbon_app/src/managers/modplatforms/: curseforge.rs  modrinth.rs
crates/carbon_app/src/managers/settings/: mod.rs
crates/carbon_compression/: Cargo.toml
crates/carbon_macro/: Cargo.toml
crates/carbon_macro/src/: lib.rs
crates/carbon_net/: Cargo.toml
crates/carbon_net/src/: lib.rs
crates/carbon_parsing/: Cargo.toml
crates/carbon_parsing/src/: log.rs
crates/carbon_platforms/: Cargo.toml
crates/carbon_platforms/src/: lib.rs
crates/carbon_platforms/src/curseforge/: mod.rs
crates/carbon_platforms/src/gdlauncher/manifest/schema/: mod.rs  v1.rs
crates/carbon_platforms/src/modrinth/: project.rs  search.rs  tag.rs
crates/carbon_repos/: Cargo.toml
crates/carbon_repos/prisma/: schema.prisma
crates/carbon_repos/prisma/migrations/20250608012843_add_addon_type_to_mod_file_cache/: migration.sql
crates/carbon_repos/prisma/migrations/20250902113747_remove_show_news_setting/: migration.sql
crates/carbon_repos/prisma/migrations/20251207000000_default_sort_by_created_desc/: migration.sql
crates/carbon_repos/prisma/migrations/20260102000000_add_frontend_preference/: migration.sql
crates/carbon_repos/src/: lib.rs
crates/carbon_rt_path/: Cargo.toml
crates/carbon_rt_path/src/: lib.rs
crates/iridium/: Cargo.toml
crates/iridium/src/: lib.rs
crates/prisma-cli/: Cargo.toml
my-new-minecraft-luncher/: package.json  worklog.md
scripts/: remove-backgrounds.js  upload-discord-assets.js
