[package]
name = "carbon_app"
version = "0.0.0"
edition = "2024"

[dependencies]
semver = "1.0.25"
anyhow = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
rspc = { workspace = true }
specta = { workspace = true, features = ["chrono"] }
rspc-axum = { workspace = true, features = ["ws"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
const_format = { workspace = true }
# tracing-forest = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
async-stream = { workspace = true }
dunce = { workspace = true }
axum = { workspace = true, features = ["ws"] }
jsonwebtoken = { workspace = true }
jwt = "0.16.0"
async-trait = { workspace = true }
chrono = { workspace = true }
carbon_macro = { path = "../carbon_macro" }
carbon_compression = { path = "../carbon_compression" }
carbon_net = { path = "../carbon_net" }
carbon_scheduler = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.25.4", features = ["bundled"] }
rusqlite_migration = "1.0.2"
strum_macros = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
image = { workspace = true }
task-local-extensions = { workspace = true }
hyper = { workspace = true }
zip = { workspace = true }
httpdate = { workspace = true }
daedalus = { workspace = true }
url = { workspace = true }
serde_repr = { workspace = true }
sysinfo = { workspace = true }
iridium = { path = "../iridium", optional = true }
trash = { workspace = true }
toml = { workspace = true }
opener = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
murmurhash32 = { workspace = true }
sha2 = { workspace = true }
itertools = { workspace = true }
fs_extra = { workspace = true }
indexmap = { version = "1.9.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
tracing-test = "0.2.4"
walkdir = { workspace = true }
async-recursion = "1.1.1"
shlex = "1.3.0"
serde-enum-str = "0.4.0"
markdown = { workspace = true }
serde_plain = { workspace = true }
ring = { workspace = true }
num_cpus = { workspace = true }
display-info = { git = "https://github.com/blarfoon/display-info", rev = "e17abca4592b520b9027dbd8dc71bf756f913292" }
strip-ansi-escapes = { workspace = true }
# libc = { workspace = true }
nom = { workspace = true }
mockall = "0.13.1"
carbon_parsing = { path = "../carbon_parsing" }
carbon_rt_path = { path = "../carbon_rt_path" }
carbon_platforms = { path = "../carbon_platforms" }
carbon_repos = { path = "../carbon_repos" }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
# winapi = { version = "0.3.9" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
dotenvy = { workspace = true }
static_vcruntime = { version = "2.0.0" }

[dev-dependencies]
assert2 = { workspace = true }
tempfile = { workspace = true }
flowtest = { workspace = true }
tracing-test = { workspace = true }
mockito = { workspace = true }

[features]
production = ["iridium"]
