[package]
name = "carbon_platforms"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
serde_qs = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
carbon_macro = { path = "../carbon_macro" }
strum_macros = { workspace = true }
strum = { workspace = true }
daedalus = { workspace = true }
url = { workspace = true }
serde_repr = { workspace = true }
itertools = { workspace = true }
serde-enum-str = "0.4.0"
carbon_rt_path = { path = "../carbon_rt_path" }
